ros2_wshesh/log/build_2025-09-10_16-31-36/turtle_pkg/stderr.log
  File "/ros2_wshesh/install/turtle_pkg/lib/python3.12/site-packages/turtle_pkg/TurtleController.py", line 8
    if movement == 'w' || movement =='A':        # forward
                        ^
SyntaxError: invalid syntax

